<resources>
    <string name="app_name">Base datos articulos</string>
    <string name="codigo">Ingrese código</string>
    <string name="descripcion">Ingrese descripción</string>
    <string name="precio">Ingrese precio</string>
    <string name="btn_alta">Alta</string>
    <string name="btn_borrar">Baja</string>
    <string name="btn_editar">Modificar</string>
    <string name="btn_buscar_codigo">Buscar código</string>
    <string name="btn_buscar_descripcion">Buscar descripción</string>
</resources>