<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_codigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_codigo" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion" />

    <Button
        android:id="@+id/btn_nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_alta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_precio" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/btn_borrar"
        app:layout_constraintStart_toEndOf="@+id/btn_nuevo"
        app:layout_constraintTop_toBottomOf="@+id/et_precio" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/btn_editar"
        app:layout_constraintStart_toEndOf="@+id/btn_borrar"
        app:layout_constraintTop_toBottomOf="@+id/et_precio" />

    <Button
        android:id="@+id/btn_buscar_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscar_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nuevo" />

    <Button
        android:id="@+id/btn_buscar_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/btn_buscar_descripcion"
        app:layout_constraintStart_toEndOf="@+id/btn_buscar_codigo"
        app:layout_constraintTop_toBottomOf="@+id/btn_borrar" />
</androidx.constraintlayout.widget.ConstraintLayout>